still trying to fix invisible link error...

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -56,7 +56,7 @@
 	top: 44%;
 	left: 41.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 0.99em;
 	}
 } 
 
@@ -74,7 +74,7 @@
 	top: 41%;
 	left: 42%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 0.9em;
 	}
 } 
 
@@ -442,6 +442,6 @@
 	top: 45%;
 	left: 28%;
 	.stationLink {
-		font-size: 2em;
+		font-size: 1em;
 	}
 }
